# MARS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: README.md
docs/: data_format.md  experiment_output_convention.md  system_design.md  theorem.md  token_counting.md
examples/: make_subset.py  run_experiment.py
generation/: README.md  aggregate.py  generate_traces.py  helper.py  probe.py
mars/: __init__.py  answer_equiv.py  confidence.py  npz_loader.py  parquet_loader.py  pkl_loader.py  probed_traces.py  q_model.py  raw_traces.py  results_io.py  simulation.py  voting.py
